--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,73 @@
 aiohttp==3.6.2
+aniso8601==8.0.0
 astroid==2.4.2
 async-timeout==3.0.1
+atomicwrites==1.4.0
 attrs==19.3.0
+beautifulsoup4==4.9.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
-discord-ext-menus==1.0.0a26+g84caae8
-discord.py==1.4.1
+discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus@84caae8038d0d3adc860957ccef05baeec2e2dd8
+discord.py==1.3.4
+Flask==1.1.2
+Flask-RESTful==0.3.8
 furl==2.1.0
 idna==2.10
 isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+lxml==4.5.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
+more-itertools==8.4.0
+mpmath==1.1.0
 multidict==4.7.6
+npyscreen==4.10.5
+numpy==1.19.0
+openai==0.2.4
+opencv-python==4.3.0.36
 orderedmultidict==1.0.1
+packaging==20.4
+parso==0.7.0
+Pillow==7.2.0
+pluggy==0.13.1
+pnglatex==1.1
+psutil==5.7.2
+py==1.9.0
+py-cpuinfo==7.0.0
+pycparser==2.20
+pycryptodomex==3.9.8
 pygelbooru==0.3.0
 pylint==2.5.3
-pymongo==3.11.0
+PyNaCl==1.4.0
+pynput==1.6.8
+PyOpenGL==3.1.5
+pyparsing==2.4.7
+pysaucenao==1.4.0
+pytest==5.4.3
+python-a2s==1.2.0
+pytz==2020.1
+requests==2.24.0
 six==1.15.0
+soupsieve==2.0.1
+SQLAlchemy==1.3.19
+steam==1.0.2
+sympy==1.6.1
 toml==0.10.1
+urllib3==1.25.9
+urwid==2.1.1
+vdf==3.3
+wcwidth==0.2.5
+websockets==8.1
+Werkzeug==1.0.1
+windows-curses==2.1.0
 wrapt==1.12.1
 xmltodict==0.12.0
-yarl==1.5.1
+yarl==1.4.2
+youtube-dl==2020.6.16.1
