--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  Install and build:
+  Build:
 
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8
         pip install -r requirements.txt
-        
+
     - name: Build
       run: |
         nohup python main.py
@@ -32,7 +32,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
   
-  Test api:
+  API:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
