--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build
       run: |
-        nohup python main.py
+        python main.py &
 
     - name: Lint with flake8
       run: |
@@ -41,7 +41,13 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+        pip install -r requirements.txt
+
     - name: Test with pytest
       run: |
-        nohup python main.py
+        python main.py &
         pytest
