--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,26 @@ jobs:
         pip install flake8
         pip install -r requirements.txt
 
-    - name: Test with pytest
+    - name: Start the http server
       run: |
         python main.py &
-        pytest
+
+    - name: TTA test basic
+      run: |
+        pytest ./tests/api/tta_test_basic.py
+
+    - name: TTA test offset
+      run: |
+        pytest ./tests/api/tta_test_offset.py
+
+    - name: SUB test basic
+      run: |
+        pytest ./tests/api/sub_test_basic.py
+
+    - name: SUB test offset
+      run: |
+        pytest ./tests/api/sub_test_basic.py
+
+    - name: CLA test basic
+      run: |
+        pytest ./tests/api/cla_test_basic.py
