migrate lookup table, add new endpoint

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 console_output_style = count
-addopts = -v --no-header --no-summary --color=auto --tb=line -q
+addopts = -v --no-header --no-summary --color=auto
 python_files =
 	test_cla_basic.py
 	test_sub_basic.py
