--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,6 @@ CACHE_TYPE = "filesystem"
 CACHE_DIR = "./cache"
 CACHE_DEFAULT_TIMEOUT = 300
 CACHE_IGNORE_ERRORS = true
+
+SQLALCHEMY_DATABASE_URI = "sqlite:///db.sqlite3"
+SQLALCHEMY_TRACK_MODIFICATIONS = false
