--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ JSON_AS_ASCII = false
 APPLICATION_ROOT = "/"
 PREFERRED_URL_SCHEME = "https"
 JSON_SORT_KEYS = false
-CACHE_TYPE = "filesystem"
+CACHE_TYPE = "simple"
 CACHE_DIR = "./cache"
 CACHE_DEFAULT_TIMEOUT = 300
 CACHE_IGNORE_ERRORS = true
